// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`с местом проживания по месту регистрации 1`] = `
Object {
  "registration_address": Object {
    "data": Object {
      "area_fias_id": undefined,
      "area_kladr_id": undefined,
      "block": "1",
      "block_type": "к",
      "city_district_fias_id": undefined,
      "city_district_kladr_id": undefined,
      "city_district_with_type": "г Москва",
      "city_fias_id": "0c5b2444-70a0-4932-980c-b4dc0d3f02b5",
      "city_kladr_id": "7700000000000",
      "city_with_type": "г Москва",
      "fias_actuality_state": "0",
      "fias_code": "77000000000000001640068",
      "fias_id": "1679b7fa-a5fd-448a-a556-cb685ae89b68",
      "fias_level": "8",
      "flat": undefined,
      "house": "2",
      "house_fias_id": "1679b7fa-a5fd-448a-a556-cb685ae89b68",
      "house_kladr_id": "7700000000001640068",
      "kladr_id": "7700000000001640068",
      "postal_code": "109548",
      "region_fias_id": "0c5b2444-70a0-4932-980c-b4dc0d3f02b5",
      "region_kladr_id": "7700000000000",
      "region_with_type": "г Москва",
      "settlement_fias_id": undefined,
      "settlement_kladr_id": undefined,
      "settlement_with_type": undefined,
      "street_fias_id": "d44ba5bc-2e6c-4276-a518-6d639accdd59",
      "street_kladr_id": "77000000000016400",
      "street_with_type": "ул Гурьянова",
    },
    "value": "г Москва, ул Гурьянова, д 2, к 1",
  },
  "registration_date": "24.10.2017",
  "residence_address": Object {
    "data": Object {
      "area_fias_id": undefined,
      "area_kladr_id": undefined,
      "block": "1",
      "block_type": "к",
      "city_district_fias_id": undefined,
      "city_district_kladr_id": undefined,
      "city_district_with_type": "г Москва",
      "city_fias_id": "0c5b2444-70a0-4932-980c-b4dc0d3f02b5",
      "city_kladr_id": "7700000000000",
      "city_with_type": "г Москва",
      "fias_actuality_state": "0",
      "fias_code": "77000000000000001640068",
      "fias_id": "1679b7fa-a5fd-448a-a556-cb685ae89b68",
      "fias_level": "8",
      "flat": undefined,
      "house": "2",
      "house_fias_id": "1679b7fa-a5fd-448a-a556-cb685ae89b68",
      "house_kladr_id": "7700000000001640068",
      "kladr_id": "7700000000001640068",
      "postal_code": "109548",
      "region_fias_id": "0c5b2444-70a0-4932-980c-b4dc0d3f02b5",
      "region_kladr_id": "7700000000000",
      "region_with_type": "г Москва",
      "settlement_fias_id": undefined,
      "settlement_kladr_id": undefined,
      "settlement_with_type": undefined,
      "street_fias_id": "d44ba5bc-2e6c-4276-a518-6d639accdd59",
      "street_kladr_id": "77000000000016400",
      "street_with_type": "ул Гурьянова",
    },
    "value": "г Москва, ул Гурьянова, д 2, к 1",
  },
  "residence_address_is_same": true,
}
`;

exports[`с разными местом проживания и местом регистрации 1`] = `
Object {
  "registration_address": Object {
    "data": Object {
      "area_fias_id": undefined,
      "area_kladr_id": undefined,
      "block": "1",
      "block_type": "к",
      "city_district_fias_id": undefined,
      "city_district_kladr_id": undefined,
      "city_district_with_type": "г Москва",
      "city_fias_id": "0c5b2444-70a0-4932-980c-b4dc0d3f02b5",
      "city_kladr_id": "7700000000000",
      "city_with_type": "г Москва",
      "fias_actuality_state": "0",
      "fias_code": "77000000000000001640068",
      "fias_id": "1679b7fa-a5fd-448a-a556-cb685ae89b68",
      "fias_level": "8",
      "flat": undefined,
      "house": "2",
      "house_fias_id": "1679b7fa-a5fd-448a-a556-cb685ae89b68",
      "house_kladr_id": "7700000000001640068",
      "kladr_id": "7700000000001640068",
      "postal_code": "109548",
      "region_fias_id": "0c5b2444-70a0-4932-980c-b4dc0d3f02b5",
      "region_kladr_id": "7700000000000",
      "region_with_type": "г Москва",
      "settlement_fias_id": undefined,
      "settlement_kladr_id": undefined,
      "settlement_with_type": undefined,
      "street_fias_id": "d44ba5bc-2e6c-4276-a518-6d639accdd59",
      "street_kladr_id": "77000000000016400",
      "street_with_type": "ул Гурьянова",
    },
    "value": "г Москва, ул Гурьянова, д 2, к 1",
  },
  "registration_date": "24.10.2017",
  "residence_address": Object {
    "data": Object {
      "area_fias_id": undefined,
      "area_kladr_id": undefined,
      "block": "1",
      "block_type": "к",
      "city_district_fias_id": undefined,
      "city_district_kladr_id": undefined,
      "city_district_with_type": "г Москва",
      "city_fias_id": "0c5b2444-70a0-4932-980c-b4dc0d3f02b5",
      "city_kladr_id": "7700000000000",
      "city_with_type": "г Москва",
      "fias_actuality_state": "0",
      "fias_code": "77000000000000001640068",
      "fias_id": "1679b7fa-a5fd-448a-a556-cb685ae89b68",
      "fias_level": "8",
      "flat": undefined,
      "house": "2",
      "house_fias_id": "1679b7fa-a5fd-448a-a556-cb685ae89b68",
      "house_kladr_id": "7700000000001640068",
      "kladr_id": "7700000000001640068",
      "postal_code": "109548",
      "region_fias_id": "0c5b2444-70a0-4932-980c-b4dc0d3f02b5",
      "region_kladr_id": "7700000000000",
      "region_with_type": "г Москва",
      "settlement_fias_id": undefined,
      "settlement_kladr_id": undefined,
      "settlement_with_type": undefined,
      "street_fias_id": "d44ba5bc-2e6c-4276-a518-6d639accdd59",
      "street_kladr_id": "77000000000016400",
      "street_with_type": "Тестовая",
    },
    "value": "г Москва, Тестовая, д 2, к 1",
  },
  "residence_address_is_same": false,
}
`;
